# wcgw

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  FASTMCP_MIGRATION.md  LICENSE  README.md  add.py  add_function.py  add_numbers.py  claude_desktop_config.json  config.toml  gpt_action_json_schema.json  gpt_instructions.txt  openai.md  pyproject.toml  test_fastmcp.py
.github/workflows/: python-publish.yml  python-tests.yml  python-types.yml
src/: main.rs
src/relay/: serve.py
src/relay/static/: privacy.txt
src/tools/: mod.rs  render_terminal.rs  shell.rs
src/wcgw/: __init__.py  __main__.py  basic.py  common.py  openai_utils.py  token_counter.py  tools.py  types_.py
src/wcgw/client/: __main__.py  anthropic_client.py  basic.py  claude.py  cli.py  common.py  computer_use.py  diff-instructions.txt  memory.py  modes.py  openai_client.py  openai_utils.py  schema_generator.py  sys_utils.py  tool_prompts.py  tools.py
src/wcgw/client/bash_state/: bash_state.py
src/wcgw/client/bash_state/parser/: __init__.py  bash_statement_parser.py
src/wcgw/client/encoder/: __init__.py
src/wcgw/client/file_ops/: diff_edit.py  extensions.py  search_replace.py
src/wcgw/client/mcp_server/: Readme.md  __init__.py  fastmcp_server.py  server.py  token_handler.py  token_integration.py  token_tracker.py
src/wcgw/client/repo_ops/: display_tree.py  file_stats.py  path_prob.py  paths_model.vocab  paths_tokens.model  repo_context.py
src/wcgw/relay/: client.py  serve.py
src/wcgw/ui/js/: token_counter.js  ui_integration.js
src/wcgw_cli/: anthropic_client.py  cli.py  openai_client.py  openai_utils.py
tests/: conftest.py  test_anthropic_client.py  test_bash_parser.py  test_bash_parser_complex.py  test_basic.py  test_bg_commands.py  test_common.py  test_computer_use.py  test_computer_use_base.py  test_computer_use_shell.py  test_edit.py  test_file_range_tracking.py  test_initialize.py  test_mcp_server.py  test_readfiles.py  test_sys_utils.py  test_token_counter.py  test_tools.py  test_tools_extended.py
tests/client/: test_anthropic_client_utils.py  test_memory.py  test_openai_utils.py  test_tools_basic.py  test_tools_extended.py  test_tools_file_ops.py  test_tools_files.py  test_tools_shell.py  test_tools_validation.py
tests/client/file_ops/: test_diff_edit.py  test_search_replace.py
tests/client/repo_ops/: test_display_tree.py  test_display_tree_simple.py  test_path_prob.py  test_repo_context.py
tests/client/tools/: __init__.py  test_command_validation.py  test_docker_operations.py  test_error_handling.py  test_error_handling_full.py  test_execute_bash.py  test_file_errors.py  test_file_operations.py  test_full_coverage.py  test_is_int.py  test_knowledge_transfer.py  test_large_blocks.py  test_prompt_update.py  test_render_terminal.py  test_terminal_output.py  test_terminal_output_full.py  test_terminal_output_incremental.py  test_terminal_output_raw.py  test_terminal_sequence.py  test_timeout_handling.py  test_timeout_state.py  test_user_interaction.py  test_write_file.py
tests/client/tools/test_files/: test1.py  test2.py
