[project]
authors = [{ name = "Aman Rusia", email = "gapypi@arcfu.com" }]
name = "wcgw"
version = "1.1.2"
description = "What could go wrong giving full shell access to chatgpt?"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "openai>=1.46.0",
    "mypy>=1.11.2",
    "typer>=0.12.5",
    "rich>=13.8.1",
    "python-dotenv>=1.0.1",
    "tiktoken==0.7.0",
    "pexpect>=4.9.0",
    "shell>=1.0.1",
    "types-pexpect>=4.9.0.20240806",
    "toml>=0.10.2",
    "petname>=2.6",
    "pyte>=0.8.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "websockets>=13.1",
    "pydantic>=2.9.2",
    "semantic-version>=2.10.0",
    "nltk>=3.9.1",
    "anthropic>=0.39.0",
]

[project.urls]
Homepage = "https://github.com/rusiaaman/wcgw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
wcgw_local = "wcgw:app"
wcgw = "wcgw:listen"
wcgw_relay = "wcgw.relay.serve:run"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "types-toml>=0.10.8.20240310",
    "autoflake",
    "ipython>=8.12.3",
    "gunicorn>=23.0.0",
]
