[project]
authors = [{ name = "Aman Rusia", email = "gapypi@arcfu.com" }]
name = "wcgw"
version = "2.8.4"
description = "Shell and coding agent on claude and chatgpt"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "openai>=1.46.0",
    "typer>=0.12.5",
    "rich>=13.8.1",
    "python-dotenv>=1.0.1",
    "pexpect>=4.9.0",
    "shell>=1.0.1",
    "types-pexpect>=4.9.0.20240806",
    "toml>=0.10.2",
    "petname>=2.6",
    "pyte>=0.8.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "websockets>=13.1",
    "pydantic>=2.9.2",
    "semantic-version>=2.10.0",
    "anthropic>=0.39.0",
    "tokenizers>=0.21.0",
    "pygit2>=1.16.0",
    "syntax-checker>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/rusiaaman/wcgw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wcgw", "src/mcp_wcgw_fork/src/mcp_wcgw"]

[tool.hatch.build.targets.wheel.sources]
"src/mcp_wcgw_fork/src/mcp_wcgw" = "mcp_wcgw"
"src/wcgw" = "wcgw"

[project.scripts]
wcgw_local = "wcgw:app"
wcgw = "wcgw:listen"
wcgw_relay = "wcgw.relay.serve:run"
wcgw_mcp = "wcgw:mcp_server"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "types-toml>=0.10.8.20240310",
    "autoflake",
    "ipython>=8.12.3",
    "gunicorn>=23.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "line-profiler>=4.2.0",
]

[tool.pytest.ini_options]
addopts = "--cov=wcgw --cov-report=term-missing:skip-covered --cov-report=html"
testpaths = ["tests"]
