[project]
authors = [{ name = "Aman Rusia", email = "gapypi@arcfu.com" }]
name = "wcgw"
version = "5.1.3"
description = "Shell and coding agent for Claude and other mcp clients"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.46.0",
    "typer>=0.12.5",
    "rich>=13.8.1",
    "python-dotenv>=1.0.1",
    "pexpect>=4.9.0",
    "toml>=0.10.2",
    "petname>=2.6",
    "pyte>=0.8.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "websockets>=13.1",
    "pydantic>=2.9.2",
    "semantic-version>=2.10.0",
    "anthropic>=0.39.0",
    "tokenizers>=0.21.0",
    "pygit2>=1.16.0",
    "syntax-checker>=0.3.0",
    "psutil>=7.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-bash>=0.23.3",
    "mcp>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/rusiaaman/wcgw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wcgw", "src/wcgw_cli"]

[tool.hatch.build.targets.wheel.sources]
"src/wcgw" = "wcgw"
"src/wcgw_cli" = "wcgw_cli"

[project.scripts]
wcgw_local = "wcgw_cli:app"
wcgw = "wcgw:mcp_server"
wcgw_mcp = "wcgw:mcp_server"

[tool.uv]
default-groups = []

[dependency-groups]
types = [
    "mypy>=1.11.2",
    "types-toml>=0.10.8.20240310",
    "types-pexpect>=4.9.0.20241208",
    "types-psutil>=7.0.0.20250218",
    "line-profiler>=4.2.0",
]
tests = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.25.3",
]
dev = [
    "autoflake",
    "ipython>=8.12.3",
    "gunicorn>=23.0.0",
    "line-profiler>=4.2.0",
]

[tool.pytest.ini_options]
addopts = "--cov=wcgw --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
